// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Create > correctly renders the Mnemonic Preview page 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Backup
    <br />
     
    <mark>
      Mnemonic Phrase
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 14.285714285714286%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      class="dusk-stepper__step"
    >
      3
    </span>
    <span
      class="dusk-stepper__step"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-default"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container dusk-card__heading-container--warning-card"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
            />
          </svg>
          
           
          <h3
            class="h4"
          >
            Keep this SAFE
          </h3>
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <p
        class="mnemonic-card__notice svelte-1g52dt5"
      >
        Please make sure to write your phrase down and save it in a secure location.
      </p>
       
      <ol
        class="dusk-words"
      >
        <li
          class="dusk-words__word"
        >
          cart
        </li>
        <li
          class="dusk-words__word"
        >
          dad
        </li>
        <li
          class="dusk-words__word"
        >
          sail
        </li>
        <li
          class="dusk-words__word"
        >
          wreck
        </li>
        <li
          class="dusk-words__word"
        >
          robot
        </li>
        <li
          class="dusk-words__word"
        >
          grit
        </li>
        <li
          class="dusk-words__word"
        >
          combine
        </li>
        <li
          class="dusk-words__word"
        >
          noble
        </li>
        <li
          class="dusk-words__word"
        >
          rap
        </li>
        <li
          class="dusk-words__word"
        >
          farm
        </li>
        <li
          class="dusk-words__word"
        >
          slide
        </li>
        <li
          class="dusk-words__word"
        >
          sad
        </li>
      </ol>
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
   
  
   
  
</div>
`;

exports[`Create > correctly renders the Mnemonic Verification page 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Backup
    <br />
     
    <mark>
      Mnemonic Phrase
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 28.571428571428573%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      class="dusk-stepper__step"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-medium"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            Verification
          </h3>
           
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <p>
        Ensure you have backed up the Mnemonic phrase.
      </p>
       
      <div
        class="dusk-mnemonic"
      >
        <div
          class="dusk-mnemonic__actions-wrapper"
        >
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
            disabled=""
            type="button"
          >
            <svg
              class="dusk-icon dusk-icon--size--default dusk-button__icon"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.5,7A6.5,6.5 0 0,0 4,13.5A6.5,6.5 0 0,0 10.5,20H14V18H10.5C8,18 6,16 6,13.5C6,11 8,9 10.5,9H16.17L13.09,12.09L14.5,13.5L20,8L14.5,2.5L13.08,3.91L16.17,7H10.5M18,18H16V20H18V18Z"
              />
            </svg>
            
             
            <span
              class="dusk-button__text"
            >
              Undo
            </span>
            
          </button>
        </div>
         
        <ol
          class="dusk-words"
        >
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
        </ol>
         
        <div
          class="dusk-mnemonic__validate-actions-wrapper"
        >
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="grit"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              grit
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="wreck"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              wreck
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="cart"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              cart
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="dad"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              dad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="rap"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              rap
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sail"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sail
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="robot"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              robot
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="combine"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              combine
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="noble"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              noble
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="slide"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              slide
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sad"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="farm"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              farm
            </span>
          </button>
          
        </div>
      </div>
       
      
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
   
  
</div>
`;

exports[`Create > doesn't let the user proceed if they have entered mismatching Mnemonic 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Backup
    <br />
     
    <mark>
      Mnemonic Phrase
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 28.571428571428573%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      class="dusk-stepper__step"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-medium"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            Verification
          </h3>
           
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <p>
        Ensure you have backed up the Mnemonic phrase.
      </p>
       
      <div
        class="dusk-mnemonic"
      >
        <div
          class="dusk-mnemonic__actions-wrapper"
        >
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
            type="button"
          >
            <svg
              class="dusk-icon dusk-icon--size--default dusk-button__icon"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.5,7A6.5,6.5 0 0,0 4,13.5A6.5,6.5 0 0,0 10.5,20H14V18H10.5C8,18 6,16 6,13.5C6,11 8,9 10.5,9H16.17L13.09,12.09L14.5,13.5L20,8L14.5,2.5L13.08,3.91L16.17,7H10.5M18,18H16V20H18V18Z"
              />
            </svg>
            
             
            <span
              class="dusk-button__text"
            >
              Undo
            </span>
            
          </button>
        </div>
         
        <ol
          class="dusk-words"
        >
          <li
            class="dusk-words__word"
          >
            grit
          </li>
          <li
            class="dusk-words__word"
          >
            wreck
          </li>
          <li
            class="dusk-words__word"
          >
            cart
          </li>
          <li
            class="dusk-words__word"
          >
            dad
          </li>
          <li
            class="dusk-words__word"
          >
            rap
          </li>
          <li
            class="dusk-words__word"
          >
            sail
          </li>
          <li
            class="dusk-words__word"
          >
            robot
          </li>
          <li
            class="dusk-words__word"
          >
            combine
          </li>
          <li
            class="dusk-words__word"
          >
            noble
          </li>
          <li
            class="dusk-words__word"
          >
            slide
          </li>
          <li
            class="dusk-words__word"
          >
            sad
          </li>
          <li
            class="dusk-words__word"
          >
            farm
          </li>
        </ol>
         
        <div
          class="dusk-mnemonic__validate-actions-wrapper"
        >
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="grit"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              grit
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="wreck"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              wreck
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="cart"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              cart
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="dad"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              dad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="rap"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              rap
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sail"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sail
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="robot"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              robot
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="combine"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              combine
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="noble"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              noble
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="slide"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              slide
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sad"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="farm"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              farm
            </span>
          </button>
          
        </div>
      </div>
       
      <div
        class="banner banner--error"
      >
        <svg
          class="dusk-icon dusk-icon--size--large banner__icon banner__icon--error"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M23,12L20.56,14.78L20.9,18.46L17.29,19.28L15.4,22.46L12,21L8.6,22.47L6.71,19.29L3.1,18.47L3.44,14.78L1,12L3.44,9.21L3.1,5.53L6.71,4.72L8.6,1.54L12,3L15.4,1.54L17.29,4.72L20.9,5.54L20.56,9.22L23,12M20.33,12L18.5,9.89L18.74,7.1L16,6.5L14.58,4.07L12,5.18L9.42,4.07L8,6.5L5.26,7.09L5.5,9.88L3.67,12L5.5,14.1L5.26,16.9L8,17.5L9.42,19.93L12,18.81L14.58,19.92L16,17.5L18.74,16.89L18.5,14.1L20.33,12M11,15H13V17H11V15M11,7H13V13H11V7"
          />
        </svg>
        
         
        <div>
          <strong
            class="banner__title"
          >
            Mnemonic does not match.
          </strong>
           
          <p>
            Please ensure you have entered the mnemonic phrase in the correct order.
          </p>
        </div>
      </div>
      
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
   
  
</div>
`;

exports[`Create > ensures that the Undo button on the Mnemonic Validate step works as expected 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Backup
    <br />
     
    <mark>
      Mnemonic Phrase
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 28.571428571428573%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      class="dusk-stepper__step"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-medium"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            Verification
          </h3>
           
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <p>
        Ensure you have backed up the Mnemonic phrase.
      </p>
       
      <div
        class="dusk-mnemonic"
      >
        <div
          class="dusk-mnemonic__actions-wrapper"
        >
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
            type="button"
          >
            <svg
              class="dusk-icon dusk-icon--size--default dusk-button__icon"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.5,7A6.5,6.5 0 0,0 4,13.5A6.5,6.5 0 0,0 10.5,20H14V18H10.5C8,18 6,16 6,13.5C6,11 8,9 10.5,9H16.17L13.09,12.09L14.5,13.5L20,8L14.5,2.5L13.08,3.91L16.17,7H10.5M18,18H16V20H18V18Z"
              />
            </svg>
            
             
            <span
              class="dusk-button__text"
            >
              Undo
            </span>
            
          </button>
        </div>
         
        <ol
          class="dusk-words"
        >
          <li
            class="dusk-words__word"
          >
            cart
          </li>
          <li
            class="dusk-words__word"
          >
            dad
          </li>
          <li
            class="dusk-words__word"
          >
            sail
          </li>
          <li
            class="dusk-words__word"
          >
            wreck
          </li>
          <li
            class="dusk-words__word"
          >
            robot
          </li>
          <li
            class="dusk-words__word"
          >
            grit
          </li>
          <li
            class="dusk-words__word"
          >
            combine
          </li>
          <li
            class="dusk-words__word"
          >
            noble
          </li>
          <li
            class="dusk-words__word"
          >
            rap
          </li>
          <li
            class="dusk-words__word"
          >
            farm
          </li>
          <li
            class="dusk-words__word"
          >
            slide
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
        </ol>
         
        <div
          class="dusk-mnemonic__validate-actions-wrapper"
        >
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="grit"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              grit
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="wreck"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              wreck
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="cart"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              cart
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="dad"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              dad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="rap"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              rap
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sail"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sail
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="robot"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              robot
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="combine"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              combine
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="noble"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              noble
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="slide"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              slide
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sad"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="farm"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              farm
            </span>
          </button>
          
        </div>
      </div>
       
      
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
   
  
</div>
`;

exports[`Create > ensures the All Done step renders as expected 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  
   
  
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Welcome to
    <br />
     
    <mark>
      Dusk
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 85.71428571428571%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      4
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      5
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      6
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-medium"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            You are all set!
          </h3>
           
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <img
        alt="All Set"
        class="all-set__illustration"
        height="182"
        src="/some-base-path/images/onboarding/all_set_illustration.svg"
        width="205"
      />
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
</div>
`;

exports[`Create > ensures the Network Syncing step renders as expected 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Network
    <br />
     
    <mark>
      Syncing
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 71.42857142857143%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      4
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      5
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-default"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            Block Height
          </h3>
           
          <div
            class="dusk-card__heading-icons"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M21,16.5C21,16.88 20.79,17.21 20.47,17.38L12.57,21.82C12.41,21.94 12.21,22 12,22C11.79,22 11.59,21.94 11.43,21.82L3.53,17.38C3.21,17.21 3,16.88 3,16.5V7.5C3,7.12 3.21,6.79 3.53,6.62L11.43,2.18C11.59,2.06 11.79,2 12,2C12.21,2 12.41,2.06 12.57,2.18L20.47,6.62C20.79,6.79 21,7.12 21,7.5V16.5M12,4.15L6.04,7.5L12,10.85L17.96,7.5L12,4.15M5,15.91L11,19.29V12.58L5,9.21V15.91M19,15.91V9.21L13,12.58V19.29L19,15.91Z"
              />
            </svg>
            
          </div>
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <p>
        Store the current block height in case you want to resync from it next time
    you reset your wallet. This can significantly reduce the initial sync time.
      </p>
       
      <div
        class="copy-field"
      >
        <input
          class="dusk-textbox dusk-textbox-text copy-field__content"
          readonly=""
          type="text"
        />
        
         
        <button
          aria-label="Copy Address"
          class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button copy-field__button"
          disabled=""
          type="button"
        >
          <svg
            class="dusk-icon dusk-icon--size--default dusk-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
            />
          </svg>
          
           
          
        </button>
      </div>
       
      <small>
        This can later be retrieved from Settings. Find out more in our 
        <a
          class="dusk-anchor dusk-anchor--on-surface"
          href="https://docs.dusk.network/learn/guides/restore-height"
          rel="noopener noreferrer"
          target="_blank"
        >
          documentation
        </a>
        .
      </small>
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
</div>
`;

exports[`Create > ensures the Password step renders as expected 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    <mark>
      Password
    </mark>
    <br />
    
        Setup
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 42.857142857142854%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-default"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header dusk-card__header-toggle"
        slot="header"
      >
        <h3
          class="h4"
        >
          Password
        </h3>
         
        <div
          class="dusk-card__header-controls-wrapper"
        >
          <div
            aria-checked="false"
            aria-disabled="false"
            class="dusk-switch dusk-switch--on-surface"
            role="switch"
            tabindex="0"
          />
           
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 18H15V15H13.3C12.2 17.4 9.7 19 7 19C3.1 19 0 15.9 0 12S3.1 5 7 5C9.7 5 12.2 6.6 13.3 9H24V15H21V18M17 16H19V13H22V11H11.9L11.7 10.3C11 8.3 9.1 7 7 7C4.2 7 2 9.2 2 12S4.2 17 7 17C9.1 17 11 15.7 11.7 13.7L11.9 13H17V16M7 15C5.3 15 4 13.7 4 12S5.3 9 7 9 10 10.3 10 12 8.7 15 7 15M7 11C6.4 11 6 11.4 6 12S6.4 13 7 13 8 12.6 8 12 7.6 11 7 11Z"
            />
          </svg>
          
        </div>
      </header>
    </div>
     
     
  </div>
  
   
  <div
    class="banner banner--info"
  >
    <svg
      class="dusk-icon dusk-icon--size--large banner__icon banner__icon--info"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,15H13V17H11V15M11,7H13V13H11V7M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20Z"
      />
    </svg>
    
     
    <div>
      <strong
        class="banner__title"
      >
        Setting a password for your web wallet is optional.
      </strong>
       
      <p>
        Doing so allows you the convenience of accessing your wallet using a
    password, but it weakens the overall security. Not using a password requires
    you to input the full mnemonic to open your wallet.
      </p>
    </div>
  </div>
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
</div>
`;

exports[`Create > ensures the Password step renders as expected 2`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    <mark>
      Password
    </mark>
    <br />
    
        Setup
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 42.857142857142854%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-default"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header dusk-card__header-toggle"
        slot="header"
      >
        <h3
          class="h4"
        >
          Password
        </h3>
         
        <div
          class="dusk-card__header-controls-wrapper"
        >
          <div
            aria-checked="true"
            aria-disabled="false"
            class="dusk-switch dusk-switch--on-surface"
            role="switch"
            tabindex="0"
          />
           
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 18H15V15H13.3C12.2 17.4 9.7 19 7 19C3.1 19 0 15.9 0 12S3.1 5 7 5C9.7 5 12.2 6.6 13.3 9H24V15H21V18M17 16H19V13H22V11H11.9L11.7 10.3C11 8.3 9.1 7 7 7C4.2 7 2 9.2 2 12S4.2 17 7 17C9.1 17 11 15.7 11.7 13.7L11.9 13H17V16M7 15C5.3 15 4 13.7 4 12S5.3 9 7 9 10 10.3 10 12 8.7 15 7 15M7 11C6.4 11 6 11.4 6 12S6.4 13 7 13 8 12.6 8 12 7.6 11 7 11Z"
            />
          </svg>
          
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <p>
        Please store your password safely.
      </p>
       
      <input
        autocomplete="new-password"
        class="dusk-textbox dusk-textbox-password password-input"
        placeholder="Set Password"
        type="password"
      />
      
       
      <div
        class="confirm-password"
      >
        <input
          autocomplete="new-password"
          class="dusk-textbox dusk-textbox-password password-input"
          placeholder="Confirm Password"
          type="password"
        />
        
         
        <span
          class="confirm-password--meta svelte-ww95yl"
        >
          Password must be at least 8 characters
        </span>
      </div>
      
    </div>
     
  </div>
  
   
  <div
    class="banner banner--info"
  >
    <svg
      class="dusk-icon dusk-icon--size--large banner__icon banner__icon--info"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,15H13V17H11V15M11,7H13V13H11V7M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20Z"
      />
    </svg>
    
     
    <div>
      <strong
        class="banner__title"
      >
        Setting a password for your web wallet is optional.
      </strong>
       
      <p>
        Doing so allows you the convenience of accessing your wallet using a
    password, but it weakens the overall security. Not using a password requires
    you to input the full mnemonic to open your wallet.
      </p>
    </div>
  </div>
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
</div>
`;

exports[`Create > ensures the Swap To Native Dusk step renders as expected 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Swap ERC20
    <br />
    
        to 
    <mark>
      Native Dusk
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 57.142857142857146%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      4
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <p>
    The ERC20 token swap functionality is currently disabled and will be provided
  after the launch of the Dusk mainnet.
  </p>
   
  <button
    class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button--labeled"
    disabled=""
    type="button"
  >
    <svg
      class="dusk-icon dusk-icon--size--default dusk-button__icon"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
      />
    </svg>
    
     
    <span
      class="dusk-button__text"
    >
      Swap ERC20 to NDUSK
    </span>
    
  </button>
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
</div>
`;

exports[`Create > lets the user proceed if they have entered a matching Mnemonic 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  
   
  
   
  <h2
    class="h1"
    slot="heading"
  >
    Backup
    <br />
     
    <mark>
      Mnemonic Phrase
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 28.571428571428573%;"
  >
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      2
    </span>
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      3
    </span>
    <span
      class="dusk-stepper__step"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-medium"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            Verification
          </h3>
           
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <p>
        Ensure you have backed up the Mnemonic phrase.
      </p>
       
      <div
        class="dusk-mnemonic"
      >
        <div
          class="dusk-mnemonic__actions-wrapper"
        >
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
            type="button"
          >
            <svg
              class="dusk-icon dusk-icon--size--default dusk-button__icon"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.5,7A6.5,6.5 0 0,0 4,13.5A6.5,6.5 0 0,0 10.5,20H14V18H10.5C8,18 6,16 6,13.5C6,11 8,9 10.5,9H16.17L13.09,12.09L14.5,13.5L20,8L14.5,2.5L13.08,3.91L16.17,7H10.5M18,18H16V20H18V18Z"
              />
            </svg>
            
             
            <span
              class="dusk-button__text"
            >
              Undo
            </span>
            
          </button>
        </div>
         
        <ol
          class="dusk-words"
        >
          <li
            class="dusk-words__word"
          >
            cart
          </li>
          <li
            class="dusk-words__word"
          >
            dad
          </li>
          <li
            class="dusk-words__word"
          >
            sail
          </li>
          <li
            class="dusk-words__word"
          >
            wreck
          </li>
          <li
            class="dusk-words__word"
          >
            robot
          </li>
          <li
            class="dusk-words__word"
          >
            grit
          </li>
          <li
            class="dusk-words__word"
          >
            combine
          </li>
          <li
            class="dusk-words__word"
          >
            noble
          </li>
          <li
            class="dusk-words__word"
          >
            rap
          </li>
          <li
            class="dusk-words__word"
          >
            farm
          </li>
          <li
            class="dusk-words__word"
          >
            slide
          </li>
          <li
            class="dusk-words__word"
          >
            sad
          </li>
        </ol>
         
        <div
          class="dusk-mnemonic__validate-actions-wrapper"
        >
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="grit"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              grit
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="wreck"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              wreck
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="cart"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              cart
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="dad"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              dad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="rap"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              rap
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sail"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sail
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="robot"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              robot
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="combine"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              combine
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="noble"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              noble
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="slide"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              slide
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="sad"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              sad
            </span>
          </button>
          
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
            data-value="farm"
            disabled=""
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              farm
            </span>
          </button>
          
        </div>
      </div>
       
      
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-button__text"
      >
        Back
      </span>
      
    </button>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
   
  
</div>
`;

exports[`Create > should render the \`Securely store your mnemonic phrase!\` agreement step after the ToS 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  <h2
    class="h1"
    slot="heading"
  >
    Backup
    <br />
     
    <mark>
      Mnemonic Phrase
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 7; --progress-width: 0%;"
  >
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step"
    >
      2
    </span>
    <span
      class="dusk-stepper__step"
    >
      3
    </span>
    <span
      class="dusk-stepper__step"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    <span
      class="dusk-stepper__step"
    >
      6
    </span>
    <span
      class="dusk-stepper__step"
    >
      7
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-medium"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            Securely store your mnemonic phrase!
          </h3>
           
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <div
        class="dusk-agreement"
      >
        <input
          class="dusk-checkbox"
          id="dusk-checkbox-16"
          name="mnemonic_agreement_one"
          tabindex="0"
          type="checkbox"
        />
         
        <label
          class="dusk-agreement__label"
          for="dusk-checkbox-16"
        >
          I understand that without my mnemonic phrase I cannot access my wallet and its assets.
        </label>
      </div>
       
      <div
        class="dusk-agreement"
      >
        <input
          class="dusk-checkbox"
          id="dusk-checkbox-16"
          name="mnemonic_agreement_two"
          tabindex="0"
          type="checkbox"
        />
         
        <label
          class="dusk-agreement__label"
          for="dusk-checkbox-16"
        >
          I understand that securing my recovery phrase is my own responsibility.
        Only I have access to my recovery phrase
        </label>
      </div>
    </div>
     
  </div>
  
   
  <div
    class="banner banner--warning"
  >
    <svg
      class="dusk-icon dusk-icon--size--large banner__icon banner__icon--warning"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
      />
    </svg>
    
     
    <div>
      <strong
        class="banner__title"
      >
        Dusk will not save and cannot retrieve your mnemonic phrase.
      </strong>
       
      <p>
        To proceed, please check all the relevant boxes.
      </p>
    </div>
  </div>
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <a
      aria-disabled="false"
      class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--default dusk-icon-button--labeled"
      href="/some-base-path/setup"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-anchor-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-anchor-button__text"
      >
        Back
      </span>
      
      
    </a>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
   
  
   
  
   
  
</div>
`;

exports[`Create > should render the Existing Wallet notice step of the Create flow if there is a userId saved in localStorage 1`] = `
<div
  class="onboarding-wrapper svelte-i0tbsw"
>
  <section>
    <div
      class="dusk-card dusk-card--gap-default"
    >
      <div
        class="dusk-card__header-container"
      >
        <header
          class="dusk-card__header"
          slot="header"
        >
          <div
            class="dusk-card__heading-container dusk-card__heading-container--warning-card"
          >
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
              />
            </svg>
            
             
            <h3
              class="h4"
            >
              Existing Wallet Detected
            </h3>
          </div>
        </header>
      </div>
       
      <div
        class="dusk-card__body-container"
      >
        <p>
          Initializing a new wallet will replace your existing local wallet cache,
      erasing any stored data. Ensure you have securely backed up your current
      wallet's mnemonic phrase to prevent loss. Proceeding without a backup can
      lead to irreversible loss of access to your assets.
        </p>
         
        <div
          class="actions svelte-3n8m2w"
        >
          <a
            aria-disabled="false"
            class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--default actions__action"
            href="/some-base-path/setup"
          >
            <span
              class="dusk-anchor-button__text"
            >
              Back
            </span>
            
          </a>
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default actions__action"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              Proceed
            </span>
          </button>
        </div>
      </div>
       
    </div>
    
  </section>
</div>
`;

exports[`Create > should render the Terms of Service step of the Create flow if there is no userId saved in localStorage 1`] = `
<div
  class="onboarding-wrapper svelte-i0tbsw"
>
  <section>
    <div
      class="dusk-card dusk-card--gap-default"
    >
      <div
        class="dusk-card__header-container"
      >
        <header
          class="dusk-card__header"
          slot="header"
        >
          <div
            class="dusk-card__heading-container"
          >
            <h3
              class="h4"
            >
              Terms & Privacy Policy
            </h3>
             
          </div>
        </header>
      </div>
       
      <div
        class="dusk-card__body-container"
      >
        <p>
          Our 
          <a
            class="dusk-anchor dusk-anchor--on-surface"
            href="https://dusk.network/privacy-policy/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Terms & Privacy Policy
          </a>
           govern your use of our services, including data handling and user responsibilities.
      Your privacy and security are our top priorities.
        </p>
         
        <div
          class="actions svelte-3n8m2w"
        >
          <a
            aria-disabled="false"
            class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--default actions__action"
            href="/some-base-path/setup"
          >
            <span
              class="dusk-anchor-button__text"
            >
              Cancel
            </span>
            
          </a>
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default actions__action"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              Accept
            </span>
          </button>
        </div>
      </div>
       
    </div>
    
  </section>
</div>
`;
